bugfix: Fix the way main features display on mobile devices (landing page); closes #64

--- a/src/components/PageContent/PageContent.css
+++ b/src/components/PageContent/PageContent.css
@@ -15,3 +15,33 @@
 .link1:hover {
   text-decoration: underline;
 }
+
+.splash {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 1em;
+}
+
+.splash__stack {
+  margin-bottom: 2em;
+}
+
+@media screen and (max-width: 700px) {
+  .splash__stack {
+    flex-direction: column !important;
+  }
+
+  .splash__card {
+    width: 100%;
+    margin: 1em 0 !important;
+  }
+}
+@media screen and (min-width: 701px) {
+  .splash__stack {
+    flex-direction: row !important;
+  }
+
+  .splash__card {
+    width: 33%;
+  }
+}
